Fix dropdown z-index collision

--- a/src/styles/ListView.css
+++ b/src/styles/ListView.css
@@ -80,7 +80,7 @@
     & .buttonbar {
         position: sticky;
         top: 0;
-        z-index: 99;
+        z-index: 9;
         /* mask-image: linear-gradient(to bottom, black 0%, transparent 100%) */
     }
 
